--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,5 @@
 @import './modules/sign-up/sign-up-fifth';
 @import './modules/sign-in-page';
 @import "./products/index";
+@import './mypage/mypage-sidemenu';
+@import './user/logout';
