finish_header_mypages_link
#what

as a title

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -37,7 +37,7 @@
               .right-header_todo-list_icon
                 %i.fas.fa-check-circle.check-icon
             %li.right-header_mypage-link
-              = link_to 'マイページ', "#", style:'text-decoration:none;color:#333333', class:'right-header_mypage-link_text'
+              = link_to 'マイページ', "/mypages/#{current_user.id}", style:'text-decoration:none;color:#333333', class:'right-header_mypage-link_text'
               .right-header_mypage-link_icon
                 %i.fas.fa-user-circle.user-icon
       - else
