--- a/app/views/mypages/_mypage-sidemenu.html.haml
+++ b/app/views/mypages/_mypage-sidemenu.html.haml
@@ -76,7 +76,7 @@
           %li.l-side__list__link
             プロフィール
             %i.fas.fa-angle-right
-        = link_to "", class:"l-side__list__link__area__name" do
+        = link_to "/address/#{current_user.id}/edit", class:"l-side__list__link__area__name" do
           %li.l-side__list__link
             発送元・お届け先住所変更
             %i.fas.fa-angle-right
