--- a/app/assets/stylesheets/mypage/_mypage.scss
+++ b/app/assets/stylesheets/mypage/_mypage.scss
@@ -1,7 +1,7 @@
 *{
   box-sizing: border-box;
 }
-body {
+.body {
   background: #f5f5f5;
   font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
 }
