--- a/app/views/address/edit.html.haml
+++ b/app/views/address/edit.html.haml
@@ -1,40 +1,50 @@
-.contents-inner
-  = form_for @address, url: { controller: :address, action: :update } do |user|
-    .form-area
-      %label お名前
-      %span.form-area__tag 必須
-      = user.text_field :address_first_name, class:"input-default", placeholder: "例) 山田"
-    .form-area-name
-      = user.text_field :address_last_name, class:"input-default", placeholder: "例) 彩"
-    .form-area
-      %label お名前カナ
-      %span.form-area__tag 必須
-      = user.text_field :address_first_name_kana, class:"input-default", placeholder: "例) ヤマダ"
-    .form-area-name
-      = user.text_field :address_last_name_kana, class:"input-default", placeholder: "例) アヤ"
-    .form-area
-      %label 郵便番号
-      %span.form-area__tag 必須
-      = user.text_field :address_number, class:"input-default", placeholder: "例) 1234567"
-    .form-area
-      %label 都道府県
-      %span.form-area__tag 必須
-      = user.select :address_prefecture, User.address_prefectures.keys,{}, class:"select-place"
-    .form-area
-      %label 市区町村
-      %span.form-area__tag 必須
-      = user.text_field :address_name, class:"input-default", placeholder: "例) 名古屋市"
-    .form-area
-      %label 番地
-      %span.form-area__tag 必須
-      = user.text_field :address_block, class:"input-default", placeholder: "例) 中区栄1-1-1"
-    .form-area
-      %label 建物名
-      %span.form-area__tag 任意
-      = user.text_field :address_building, class:"input-default", placeholder: "例) メゾン南蛮 201"
-    .form-area
-      %label 電話
-      %span.form-area__tag 任意
-      = user.text_field :address_phone_number, class:"input-default", placeholder: "例）09012345678"
-    .delete-deco
-      = user.submit "変更する", class: "btn-update btn-red"
+=render partial: 'layouts/header'
+.background
+  .mypage-box
+    %main.my-containercleanfix
+      = render partial: "mypages/mypage-sidemenu"
+      .right-contents
+        %h2.contents-header
+          発送元・お届け先住所変更
+        .contents-inner
+          = form_for @address, url: { controller: :address, action: :edit } do |user|
+            .form-area
+              %label お名前
+              %span.form-area__tag 必須
+              = user.text_field :first_name, class:"input-default", placeholder: "例) 山田"
+            .form-area-name
+              = user.text_field :last_name, class:"input-default", placeholder: "例) 彩"
+            .form-area
+              %label お名前カナ
+              %span.form-area__tag 必須
+              = user.text_field :first_name_kana, class:"input-default", placeholder: "例) ヤマダ"
+            .form-area-name
+              = user.text_field :last_name_kana, class:"input-default", placeholder: "例) アヤ"
+            .form-area
+              %label 郵便番号
+              %span.form-area__tag 必須
+              = user.text_field :address_number, class:"input-default", placeholder: "例) 1234567"
+            .form-area
+              %label 都道府県
+              %span.form-area__tag 必須
+              = user.select :address_prefecture, User.address_prefectures.keys,{}, class:"select-place"
+            .form-area
+              %label 市区町村
+              %span.form-area__tag 必須
+              = user.text_field :address_name, class:"input-default", placeholder: "例) 名古屋市"
+            .form-area
+              %label 番地
+              %span.form-area__tag 必須
+              = user.text_field :address_block, class:"input-default", placeholder: "例) 中区栄1-1-1"
+            .form-area
+              %label 建物名
+              %span.form-area__tag 任意
+              = user.text_field :address_building, class:"input-default", placeholder: "例) メゾン南蛮 201"
+            .form-area
+              %label 電話
+              %span.form-area__tag 任意
+              = user.text_field :address_phone_number, class:"input-default", placeholder: "例）09012345678"
+            .delete-deco
+              = user.submit "変更する", class: "btn-update btn-red"
+= render partial: 'layouts/footer'
+
