edit-profile-view

--- a/app/views/mypages/edit.html.haml
+++ b/app/views/mypages/edit.html.haml
@@ -1,2 +1,17 @@
-%h1 Mypages#edit
-%p Find me in app/views/mypages/edit.html.haml
+=render partial: 'layouts/header'
+.wrapper1.clearfix
+  =render 'mypages/mypage-sidemenu'
+
+  .profile-container
+    %h2.container__profile プロフィール
+    = form_for @user, url: { controller: :mypages, action: :update } , html:{class: "edit_form"} do |f|
+      .container__name
+        = image_tag "https://static.mercdn.net/images/member_photo_noimage_thumb.png", class: "image-tag"
+        = f.text_field :nickname, value: "#{@user.nickname}" ,class: "edit_name"
+      .container__text
+        = f.text_area :introduce, value: "#{@user.introduce}",class: "introduce", placeholder: "例）こんにちは☆ ご覧いただきありがとうございます！かわいいものやきれいめオフィスカジュアル中心に出品しています。服のサイズは主に9号です。気持ちよくお取引できるよう心がけていますので、商品や発送方法などご質問がありましたらお気軽にどうぞ♪"
+        .container__bottun
+          = f.submit "変更する", class: 'change-profile-form__action-btn'
+
+=render partial: 'layouts/footer'
+=render partial: 'layouts/footer-button'
