profile-background-image

--- a/app/assets/stylesheets/mypage/_edit.scss
+++ b/app/assets/stylesheets/mypage/_edit.scss
@@ -34,10 +34,11 @@
       // height: 60px;
       padding: 72px 16px 24px;
       border: 1px solid black;
-      background-image: url("/images/user-bg.jpg");
+      background-image: url("1920x1080x1ccd04f461ec705c4fc817.jpg");
+      background-size: 80% auto;
+      background-position: center;
       background-repeat: no-repeat;
       display: flex;
-     
     }
       .image-tag {
         width: 60px;
