footer-btn-linkedit

--- a/app/views/layouts/_footer-button.html.haml
+++ b/app/views/layouts/_footer-button.html.haml
@@ -1,4 +1,4 @@
-= link_to '#', class:"footer-button" do
+= link_to '/products/new', class:"footer-button" do
   %div.footer-button__text
     出品
   %i.fas.fa-camera.fa-4x
