footer-image-add

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -7,9 +7,9 @@
         .footer-top-inner__right-icon
           -# = image_tag "/images/mercari.app.acon.png", size: "68x68", class: "footer-top-inner__right-icon-left"
           .footer-top-inner__right-app
-            = link_to image_tag "/images/appstore.icon.png", size: "133x42", class: "footer-top-inner__right-app_icon-left", href:"https://apps.apple.com/jp/app/id667861049?l=ja"
+            = link_to image_tag "appstore.png", size: "133x42", class: "footer-top-inner__right-app_icon-left", href:"https://apps.apple.com/jp/app/id667861049?l=ja"
 
-            = link_to image_tag "/images/googleplay.icon.png", size: "133x42", class: "footer-top-inner__right-app_icon-right", href:"https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja"
+            = link_to image_tag "google-play.png", size: "133x42", class: "footer-top-inner__right-app_icon-right", href:"https://play.google.com/store/apps/details?id=com.kouzoh.mercari&hl=ja"
       .footer-top-inner__left
 
   .footer-bottom
@@ -115,6 +115,6 @@
                 United Status
     .footer-sub
       .footer-sub__left
-        = link_to image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?2414431219", href:"https://www.mercari.com/jp/"
+        = link_to image_tag "fmarket_logo_white.svg", href:"https://www.mercari.com/jp/"
       .footer-sub__right
         %small © Mercari, inc
