--- a/app/views/signup/done.html.haml
+++ b/app/views/signup/done.html.haml
@@ -21,5 +21,5 @@
         %span.fifth-main__inner--text ありがとうございます。
         %br 会員登録が完了しました。
         = link_to 'メルカリをはじめる', root_path, class: 'fifth-main__inner--btn'
-    = image_tag '/images/sign-up-fifth-image.png', class: 'fifth-main__image'
+    = image_tag 'sign-up-fifth-image.png', class: 'fifth-main__image'
   = render 'shared/user-footer'
