--- a/app/views/signup/registration.html.haml
+++ b/app/views/signup/registration.html.haml
@@ -114,7 +114,7 @@
             ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
         .first-main__box--bottom
           .robot
-            = image_tag '/images/temporary_reCAPTCHA.png', size: '304x78'
+            = image_tag 'temporary_reCAPTCHA.png', size: '304x78'
           .first-main__user-policy
             %p
               「次へ進む」のボタンを押すことにより、
