--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,7 @@
 @import './modules/sign-up/sign-up-fifth';
 @import './modules/sign-in-page';
 @import "./products/index";
+@import "./products/new";
 @import './mypage/mypage-sidemenu';
 @import './user/logout';
 @import './mypage/mypage';
