--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -1,6 +1,6 @@
-// @mixin form-border-top {
-//   border-top: solid 1px whitesmoke;
-// }
+@mixin form-border-top {
+  border-top: solid 1px whitesmoke;
+}
 
 $sub-text-color: #333;
 
@@ -49,7 +49,7 @@ $sub-text-color: #333;
 }
 
 .listing-upload {
-  // @include form-border-top;
+  @include form-border-top;
   width: 100%;
   // height: 303px;
   padding: 40px;
@@ -113,7 +113,7 @@ $sub-text-color: #333;
 
 ///// フォーム大枠基本セット /////
 .listing-content {
-  // @include form-border-top;
+  @include form-border-top;
   width: 100%;
   padding:40px;
 }
@@ -285,7 +285,7 @@ $sub-text-color: #333;
 
 // 送信ボタンと注意書きボックス
 .listing-product-submit-box {
-  // @include form-border-top;
+  @include form-border-top;
   height: 328px;
   padding: 40px;
 
