--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,7 +1,7 @@
 .listing-wrapper
   = render 'shared/user-header'
 
-  = form_with model: @product, class: 'listing-inner-contents', id: "productForm" do |f|
+  = form_with model: @product, class: 'listing-inner-contents' do |f|
     .listing-inner-contents__title 商品の情報を入力
 
     -# 商品画像提出
@@ -14,9 +14,10 @@
 
           .listing-upload__drag-box--inner-text
             クリックしてファイルをアップロード
-        = f.file_field :photos, multiple: true, direct_upload: true, accept: 'image/jpg,image/png', id: 'photo_upload'
+      = f.fields_for :images do |i|
+        = i.file_field :image
       .preview-reset リセットアップロード
-      = render partial: 'error-messages', locals: {product: @product, column: "photos"}
+      = render partial: 'error-messages', locals: {product: @product, column: "image"}
       - if @product.errors.any?
         - unless @product.valid?
           - if @product.errors.full_messages_for(:photos) == []
@@ -29,14 +30,41 @@
       .listing-product-name
         = f.label "商品名", class: 'listing-default__label'
         %span.listing-default--require 必須
-        = f.text_field :product_name, class: 'listing-default__form', placeholder: '商品名（必須 40文字まで)'
-        = render partial: 'error-messages', locals: {product: @product, column: "product_name"}
+        = f.text_field :name, class: 'listing-default__form', placeholder: '商品名（必須 40文字まで)'
+        = render partial: 'error-messages', locals: {product: @product, column: "name"}
 
       .listing-product-description
         = f.label '商品の説明', class: 'listing-default__label'
         %span.listing-default--require 必須
-        = f.text_area :product_introduction, rows: 10, wrap: "soft", class: 'listing-default__form-field',  placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"
-        = render partial: 'error-messages', locals: {product: @product, column: "product_introduction"}
+        = f.text_area :description, rows: 10, wrap: "soft", class: 'listing-default__form-field',  placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"
+        = render partial: 'error-messages', locals: {product: @product, column: "description"}
+
+      .listing-product-status
+        = f.label '商品の状態', class: 'listing-default__label'
+        %span.listing-default--require 必須
+        .listing-select-wrapper
+          .listing-select-wrapper__box
+            = f.select :size, Product.sizes.keys.to_a,{ include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
+            %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
+        = render partial: 'error-messages', locals: {product: @product, column: "size"}
+
+      .listing-product-status
+        = f.label '商品の状態', class: 'listing-default__label'
+        %span.listing-default--require 必須
+        .listing-select-wrapper
+          .listing-select-wrapper__box
+            = f.select :sell_state, Product.sell_states.keys.to_a,{ include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
+            %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
+        = render partial: 'error-messages', locals: {product: @product, column: "sell_state"}
+
+      .listing-product-status
+        = f.label '商品の状態', class: 'listing-default__label'
+        %span.listing-default--require 必須
+        .listing-select-wrapper
+          .listing-select-wrapper__box
+            = f.select :shipping_method, Product.shipping_methods.keys.to_a,{ include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
+            %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
+        = render partial: 'error-messages', locals: {product: @product, column: "shipping_method"}
 
     -# 商品の詳細セレクトボックスフォーム
     .listing-content.clearfix
@@ -48,6 +76,7 @@
           .listing-select-wrapper
             .listing-select-wrapper__box
               -#= f.select :category, @category_parent_array, {}, {class: 'listing-select-wrapper__box--select', id: 'parent_category'}
+              = f.select :category_id, Product.category_ids.keys.to_a, { include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
               %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
         = render partial: 'error-messages', locals: {product: @product, column: "category_id"}
         - if @product.errors.any?
@@ -55,15 +84,15 @@
             - if @product.errors.full_messages_for(:category_id) == []
               %ul
                 %li.has_error_text カテゴリーを再選択してください
-        = render partial: 'error-messages', locals: {product: @product, column: "products_size_id"}
+        = render partial: 'error-messages', locals: {product: @product, column: "size"}
         .listing-product-status
           = f.label '商品の状態', class: 'listing-default__label'
           %span.listing-default--require 必須
           .listing-select-wrapper
             .listing-select-wrapper__box
-              -#= f.select :product_status, Product.product_statuses.keys.to_a,{ include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
+              = f.select :condition, Product.conditions.keys.to_a,{ include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
               %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
-        = render partial: 'error-messages', locals: {product: @product, column: "product_status"}
+        = render partial: 'error-messages', locals: {product: @product, column: "condition"}
 
 
 
@@ -80,8 +109,9 @@
             .listing-select-wrapper__box
 
               -#= f.select :delivery_charge, options_for_select(Product.delivery_charges.keys, "---"), {}, {class: 'listing-select-wrapper__box--select',id:"delivery_charge"}
+              = f.select :fee, Product.fees.keys, { include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
               %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
-        = render partial: 'error-messages', locals: {product: @product, column: "delivery_charge"}
+        = render partial: 'error-messages', locals: {product: @product, column: "fee"}
         - if @product.errors.any?
           - unless @product.valid?
             - if @product.errors.full_messages_for(:delivery_method) != []
@@ -94,18 +124,18 @@
           %span.listing-default--require 必須
           .listing-select-wrapper
             .listing-select-wrapper__box
-              -#= f.select :delivery_area, Product.delivery_areas.keys.to_a, {}, {class: 'listing-select-wrapper__box--select'}
+              = f.select :region, Product.regions.keys.to_a, { include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
               %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
-        = render partial: 'error-messages', locals: {product: @product, column: "delivery_area"}
+        = render partial: 'error-messages', locals: {product: @product, column: "region"}
 
         .listing-product-days-up-to-delivery
           .listing-default__label 配送までの日数
           %span.listing-default--require 必須
           .listing-select-wrapper
             .listing-select-wrapper__box
-              -#= f.select :delivery_days, Product.delivery_days.keys.to_a, {}, {class: 'listing-select-wrapper__box--select'}
+              = f.select :period_before_shipping, Product.period_before_shippings.keys.to_a, { include_blank: "---" }, {class: 'listing-select-wrapper__box--select'}
               %i.fas.fa-chevron-down.listing-select-wrapper__box--arrow-down
-        = render partial: 'error-messages', locals: {product: @product, column: "delivery_days"}
+        = render partial: 'error-messages', locals: {product: @product, column: "period_before_shipping"}
 
     -# 取引価格＆利益計算
     .listing-content.clearfix
