products_show_create
商品詳細ページを追加しました

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -8,21 +8,25 @@
 
   %section.item-container1
     %h1.item-container1__item-name 
-      -# = @product.name
+      = @product.name
     .item-container1__item-content.clearfix
       .content--photo
-        %ul.content--photo-up
-          -#  - @product.photos.each_with_index do |photo, i|
+        .content--photo-up
+          %ul.content--photo-up
+            - @product.images.each do |image|
+              %li.photo-up-piece
+                = image_tag image.image.url, size: "300x300"
+          -# - @product.images.each do |image|
           -#   %li.photo-up-piece
-          -#     = image_tag @product.photos[i].variant(resize:'300x300',auto_orient: true).processed
-        %ul.content--photo-down
-          -# - @product.photos.each_with_index do |photo, i|
-          -#   %li.content-photo-down__piece
-          -#     = image_tag @product.photos[i].variant(resize:'60x60',auto_orient: true).processed
-          -# -if @product.purchaser_id.present?
-            .content--photo_sold
-              .content--photo_sold__inner
-                -# SOLD
+          -#     = image_tag product.image.
+        -# %ul.content--photo-down
+        -#   - @product.photos.each_with_index do |photo, i|
+        -#     %li.content-photo-down__piece
+        -#       = image_tag @product.photos[i].variant(resize:'60x60',auto_orient: true).processed
+        -#   -if @product.purchaser_id.present?
+          -#   .content--photo_sold
+          -#     .content--photo_sold__inner
+          -#       SOLD
 
       %table.content--detail-table
         %tbody.table
@@ -30,7 +34,7 @@
             %th.table--section-left 
               出品者
             %th.table--section-right 
-              -# = @product.exhibitor.nickname
+              = @product_user.nickname
           %tr.table--section
             %th.table--section-left
               カテゴリー
@@ -45,32 +49,32 @@
             %th.table--section-left
               商品状態
             %th.table--section-right
-              -# = @product.product_status 
+              = @product.condition
           %tr.table--section
             %th.table--section-left
               配送料負担
             %th.table--section-right
-              -# = @product.delivery_charge 
+              = @product.fee 
           %tr.table--section
             %th.table--section-left
               配送方法
             %th.table--section-right
-              -# = @product.delivery_method 
+              = @product.shipping_method
           %tr.table--section
             %th.table--section-left
               配送元
             %th.table--section-right
-              -# = @product.delivery_area 
+              = @product.region 
           %tr.table--section
             %th.table--section-left
               配送日目安
             %th.table--section-right
-              -# = @product.delivery_days 
+              = @product.period_before_shipping
 
     .item-container1__item-price
       %span.item-container1__item-price-bold
         ¥
-        -# = number_with_delimiter(@product.price)
+        = number_with_delimiter(@product.price)
       %span.item-container1__item-price-tax (税込)
       %span.item-container1__item-price-shipping-fee
         -# = @product.delivery_charge
