--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -14,11 +14,9 @@
 
           .listing-upload__drag-box--inner-text
             クリックしてファイルをアップロード
-      = f.fields_for :images do |image|
-        .js-file_group{"data-index" => image.index}
-          = image.file_field :image, class: 'js-file'
-          %br/
-          %span.js-remove 削除
+      = f.fields_for :images do |i|
+        = i.file_field :image
+        .preview-reset リセットアップロード
       = render partial: 'error-messages', locals: {product: @product, column: "image"}
       - if @product.errors.any?
         - unless @product.valid?
