--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -33,8 +33,8 @@
           %tr.table--section
             %th.table--section-left 
               出品者
-            %th.table--section-right 
-              = @product_user.nickname
+            %th.table--section-right
+              = @product.user.nickname
           %tr.table--section
             %th.table--section-left
               カテゴリー
